Fix button alignment in O2M editor with Modern theme
Fixes RM-35135

--- a/axelor-web/src/main/webapp/css/modern/theme.css
+++ b/axelor-web/src/main/webapp/css/modern/theme.css
@@ -618,7 +618,8 @@ header .dropdown-submenu:focus > a {
 .o2m-list .o2m-list-row .toggle-item button {
   border-radius: 0 !important;
   box-shadow: none;
-  height: 20px !important;
+  line-height: 21px;
+  height: 21px !important;
   padding: 0 1px 2px 1px !important;
   border-bottom-color: #c0c0c0;
 }
